--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,17 @@
 <resources>
     <string name="app_name">Mattermost</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">Sign In To Mattermost</string>
+    <string name="title_activity_login">Mattermost</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email or LDAP Username</string>
+    <string name="prompt_email">Email or Username</string>
     <string name="prompt_url">Server URL (e.g. https://server.com)</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign In</string>
     <string name="action_sign_in_short">Sign In</string>
+    <string name="error_invalid_server">This URL is not a Mattermost server</string>
     <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_invalid_password">This password is invalid</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
